@@ -196,6 +196,88 @@ describe shell:
           expect (run_spec (yaml)).to_contain_output (fail_1)
 
 
+  - describe succeed_with:
+    - it diagnoses incompatible arguments:
+        expect (expect ("meh").to_succeed_with "meh").to_error "Process expected"
+    - it displays actual and expected exit status on failure: |
+        yaml = preamble .. "(spawn 'exit 3').to_succeed_with 'hell'"
+        expect (run_spec (yaml)).
+          to_match_output ("expecting exit status 0, with output:\n" ..
+                           "%s*| hell\n" ..
+                           "%s*but got exit status 3, with output:\n" ..
+                           "%s*| \n")
+    - it displays actual and expected output on failure: |
+        yaml = preamble .. "(spawn 'printf hello').to_succeed_with 'hell'"
+        expect (run_spec (yaml)).
+          to_match_output ("expecting exit status 0, with output:\n" ..
+                           "%s*| hell\n" ..
+                           "%s*but got exit status 0, with output:\n" ..
+                           "%s*| hello\n")
+    - context with all_of failure:
+      - it displays all expected and actual output for exit status mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf heaven+hell && exit 3')." ..
+                 "to_succeed_with.all_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_match_output ("expecting exit status 0, with output:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*and:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 3, with output:\n" ..
+                             "%s*| heaven%+hell\n")
+      - it displays all expected and actual output for output mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf hello').to_succeed_with.all_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_match_output ("expecting exit status 0, with output:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*and:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 0, with output:\n" ..
+                             "%s*| hello\n")
+    - context with any_of failure:
+      - it displays all expected and actual output for exit status mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf hell && exit 3')." ..
+                 "to_succeed_with.any_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_match_output ("expecting exit status 0, with output:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*or:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 3, with output:\n" ..
+                             "%s*| hell\n")
+      - it displays all expected and actual output for output mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf hello').to_succeed_with.any_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_match_output ("expecting exit status 0, with output:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*or:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 0, with output:\n" ..
+                             "%s*| hello\n")
+
+    - context when called normally:
+      - it succeeds when the exit status and output match exactly:
+          expect (spawn "printf hello").to_succeed_with "hello"
+      - it fails when the exit status mismatches:
+          yaml = preamble .. "(spawn 'printf hell && exit 3').to_succeed_with 'hell'"
+          expect (run_spec (yaml)).to_contain_output (fail_1)
+      - it fails when the output mismatches:
+          yaml = preamble .. "(spawn 'printf hello').to_succeed_with 'hell'"
+          expect (run_spec (yaml)).to_contain_output (fail_1)
+
+    - context when called with not_ prefix:
+      - it succeeds when the exit status mismatches:
+          expect (spawn "printf hello && exit 3").not_to_succeed_with "hell"
+      - it succeeds when the output mismatches:
+          expect (spawn "printf hello").not_to_succeed_with "hell"
+      - it fails when the output matches:
+          yaml = preamble .. "(spawn 'printf hello').not_to_succeed_with 'hello'"
+          expect (run_spec (yaml)).to_contain_output (fail_1)
+
+
   - describe match_output:
     - it diagnoses incompatible arguments:
         expect (expect ("meh").to_match_output "meh").to_error "Process expected"
@@ -363,6 +445,88 @@ describe shell:
       - it fails when the output matches:
           yaml = preamble ..
                  "(spawn 'printf hello >&2').not_to_output_error 'hello'"
+          expect (run_spec (yaml)).to_contain_output (fail_1)
+
+
+  - describe fail_with:
+    - it diagnoses incompatible arguments:
+        expect (expect ("meh").to_fail_with "meh").to_error "Process expected"
+    - it displays actual and expected exit status on failure: |
+        yaml = preamble .. "(spawn 'printf >&2 hell').to_fail_with 'hell'"
+        expect (run_spec (yaml)).
+          to_match_output ("expecting non%-zero exit status, with error:\n" ..
+                           "%s*| hell\n" ..
+                           "%s*but got exit status 0, with error:\n" ..
+                           "%s*| hell\n")
+    - it displays actual and expected output on failure: |
+        yaml = preamble .. "(spawn 'printf >&2 hello && exit 3').to_fail_with 'hell'"
+        expect (run_spec (yaml)).
+          to_match_output ("expecting non%-zero exit status, with error:\n" ..
+                           "%s*| hell\n" ..
+                           "%s*but got exit status 3, with error:\n" ..
+                           "%s*| hello\n")
+    - context with all_of failure:
+      - it displays all expected and actual output for exit status mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf >&2 heaven+hell')." ..
+                 "to_fail_with.all_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_match_output ("expecting non%-zero exit status, with error:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*and:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 0, with error:\n" ..
+                             "%s*| heaven%+hell\n")
+      - it displays all expected and actual output for output mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf >&2 hello && exit 3').to_fail_with.all_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_match_output ("expecting non%-zero exit status, with error:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*and:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 3, with error:\n" ..
+                             "%s*| hello\n")
+    - context with any_of failure:
+      - it displays all expected and actual output for exit status mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf >&2 hell')." ..
+                 "to_fail_with.any_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_match_output ("expecting non%-zero exit status, with error:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*or:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 0, with error:\n" ..
+                             "%s*| hell\n")
+      - it displays all expected and actual output for output mismatch:
+          yaml = preamble ..
+                 "(spawn 'printf >&2 hello && exit 3').to_fail_with.any_of {'heaven', 'hell'}"
+          expect (run_spec (yaml)).
+            to_match_output ("expecting non%-zero exit status, with error:\n" ..
+                             "%s*| heaven\n" ..
+                             "%s*or:\n" ..
+                             "%s*| hell\n" ..
+                             "%s*but got exit status 3, with error:\n" ..
+                             "%s*| hello\n")
+
+    - context when called normally:
+      - it succeeds when the exit status and error output match exactly:
+          expect (spawn "printf >&2 hello && exit 3").to_fail_with "hello"
+      - it fails when the exit status mismatches:
+          yaml = preamble .. "(spawn 'printf >&2 hell').to_fail_with 'hell'"
+          expect (run_spec (yaml)).to_contain_output (fail_1)
+      - it fails when the output mismatches:
+          yaml = preamble .. "(spawn 'printf >&2 hello && exit 3').to_fail_with 'hell'"
+          expect (run_spec (yaml)).to_contain_output (fail_1)
+
+    - context when called with not_ prefix:
+      - it succeeds when the exit status mismatches:
+          expect (spawn "printf >&2 hell").not_to_fail_with "hell"
+      - it succeeds when the output mismatches:
+          expect (spawn "printf >&2 hello && exit 3").not_to_fail_with "hell"
+      - it fails when the output matches:
+          yaml = preamble .. "(spawn 'printf >&2 hello && exit 3').not_to_fail_with 'hello'"
           expect (run_spec (yaml)).to_contain_output (fail_1)
 
 
